@@ -1,4 +1,5 @@
 0.18.16:
+ - RD-4603 Update Terraform Binary Workflow
   - RD-4693 Add import resource functionality. 
 0.18.15: RD-4023 Terratag
 0.18.14: RD-4372 Make sure that terraform plan only uses module nodes.
